Add sales reports system for admin and customer

--- a/pages/admin/book-approval.html
+++ b/pages/admin/book-approval.html
@@ -363,6 +363,9 @@
                             >Book Approval</a
                         >
                     </li>
+                    <li>
+                        <a href="sales-reports.html">Sales Reports</a>
+                    </li>
                 </ul>
                 <div class="navbar-buttons">
                     <div class="profile-dropdown">
@@ -372,6 +375,7 @@
                         <div class="dropdown-content">
                             <a href="profile.html">Profile</a>
                             <a href="book-approval.html">Dashboard</a>
+                            <a href="sales-reports.html">Sales Reports</a>
                             <a href="../../index.html" id="logout-btn"
                                 >Logout</a
                             >
