--- a/pages/customer/profile.html
+++ b/pages/customer/profile.html
@@ -316,7 +316,6 @@
                             <i class="fas fa-book"></i> My Books
                         </a>
 
-                        <a href="sales-reports.html" class="sidebar-menu-item">
                             <i class="fas fa-dollar-sign"></i> Sales Reports
                         </a>
                         <a href="profile.html" class="sidebar-menu-item active">
@@ -795,16 +794,10 @@
             document.addEventListener("DOMContentLoaded", function () {
                 console.log("DOM Content Loaded - Profile Page");
 
-                // TEMPORARY: Skip authentication check and use default user ID
-                const userId = "2"; // abid@gmail.com - for testing
-                console.log("Using default userId:", userId);
-
-                // TODO: Re-enable authentication check once fixed
-                /*
-                // Check if user is logged in (try both methods)
+                // Check if user is logged in
                 let isUserLoggedIn = false;
                 let userId = null;
-                
+
                 // Method 1: Try window.bookmarketAuth
                 if (
                     window.bookmarketAuth &&
@@ -863,13 +856,12 @@
                     window.location.href = "../login.html";
                     return;
                 }
-                */
 
                 // Load profile data
                 console.log(
-                    "About to call loadProfileData with default userId: 2"
+                    "About to call loadProfileData with userId:", userId
                 );
-                loadProfileData();
+                loadProfileData(userId);
 
                 // Logout functionality
                 const logoutBtn = document.getElementById("logout-btn");
